manifest/objects/LVGO__Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__DPP_Projected_Cases_Prevented_0_3__c</fullName>
        <formula>LVGO__Estimated_Enrolled_DPP_Population__c *0.33*0.35*0.212</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 0-3%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__DPP_Projected_Cases_Prevented_10__c</fullName>
        <formula>LVGO__Estimated_Enrolled_DPP_Population__c *0.33*0.85*0.238</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 10+%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__DPP_Projected_Cases_Prevented_3_5__c</fullName>
        <formula>LVGO__Estimated_Enrolled_DPP_Population__c *0.33*0.38*0.137</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 3-5%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__DPP_Projected_Cases_Prevented_5_7__c</fullName>
        <formula>LVGO__Estimated_Enrolled_DPP_Population__c *0.33*0.54*0.124</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 5-7%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__DSA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>DSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Data_Available__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>What, if any, discussions have taken place regarding claims &amp; elig? What data do they have available and plan to send us?</inlineHelpText>
        <label>Data Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Deal_Value__c</fullName>
        <formula>((LVGO__Livongo_for_Diabetes_PwDs__c * LVGO__Livongo_for_Diabetes_PPPM__c * 0.25 * 12))
+
(( LVGO__Livongo_for_Hypertension_PwHs__c * LVGO__Livongo_for_Hypertension_PPPM__c * 0.10 * 12))
+
IF(LVGO__Livongo_DPP_PPPM__c == 1, 608 * (LVGO__Livongo_DPP_PwPDs__c * 0.10),
(( LVGO__Livongo_DPP_PwPDs__c * LVGO__Livongo_DPP_PPPM__c * 0.10 *12)))
+
IF(LVGO__Livongo_for_Weight_Management_DP_PPPM__c == 1.00, 608 * (LVGO__Livongo_for_Weight_Management_DP_PwOs__c * 0.10),
(( LVGO__Livongo_for_Weight_Management_DP_PwOs__c * LVGO__Livongo_for_Weight_Management_DP_PPPM__c * 0.10 * 12)))
+
LVGO__Livongo_Behavioral_Health_PwBHs__c * LVGO__Livongo_for_BH_PPPM__c *12 + (LVGO__Livongo_Behavioral_Health_PwBHs__c * 0.02) * LVGO__Livongo_BH_Coaching_PPPM__c * 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the pre-close ARR, not taking into account any adjustments due to partner fees, PGs, etc. Your final commissionable ARR may differ.</inlineHelpText>
        <label>Old Gross ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Disable_BH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Discussed_Marketing_Approach__c</fullName>
        <label>Discussed Marketing Approach?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__ESI_Addendum__c</fullName>
        <description>JENGA-1543 - Sales to CI Handoff</description>
        <label>ESI Addendum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__ESI_PHI_Release_Form__c</fullName>
        <description>JENGA-1543 - Sales to CI Handoff</description>
        <label>ESI PHI Release Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Enrolled_DPP_Population__c</fullName>
        <formula>(ROUND ( LVGO__Livongo_DPP_PwPDs__c *0.10,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Enrolled DPP Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Enrolled_HTN_Population__c</fullName>
        <formula>LVGO__Livongo_for_Hypertension_PwHs__c * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Enrolled HTN Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Enrolled_Population__c</fullName>
        <formula>(ROUND (LVGO__Livongo_for_Diabetes_PwDs__c*0.35,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assuming a 35% enrollment rate</inlineHelpText>
        <label>Estimated Enrolled Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__ExpectedRevenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Expected_Annual_Cost_HTN__c</fullName>
        <formula>LVGO__Estimated_Enrolled_HTN_Population__c * LVGO__Livongo_for_Hypertension_PPPM__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Cost HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Expected_Three_year_Cost_HTN__c</fullName>
        <formula>LVGO__Expected_Annual_Cost_HTN__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Three-year Cost HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Launch_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Launch Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Close_Date__c</fullName>
        <description>The date that the deal needs to close by to be eligible for the Fast Start Credit</description>
        <inlineHelpText>The date that the deal needs to close by to be eligible for the Fast Start Credit</inlineHelpText>
        <label>Fast Start Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Credit_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you are targeting this opp for the fast start credit. Once actually presented to the client, also check the box below.</inlineHelpText>
        <label>Fast Start Credit Target?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Credit_Type__c</fullName>
        <label>Fast Start Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time (a $X,XXX credit/ $X PPPM credit)</fullName>
                </value>
                <value>
                    <fullName>Recurring (credit of $X PPPM)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you offered the prospect the fast start credit?</inlineHelpText>
        <label>Fast Start Credit Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Custom_Detail__c</fullName>
        <label>Fast Start Custom Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Launch_Date__c</fullName>
        <description>The date that the deal needs to launch by to be eligible for the Fast Start Credit</description>
        <inlineHelpText>The date that the deal needs to launch by to be eligible for the Fast Start Credit</inlineHelpText>
        <label>Fast Start Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Participation_Rate_Date__c</fullName>
        <description>The date a client needs to reach the Fast Start Participation Rate by</description>
        <inlineHelpText>The date a client needs to reach the Fast Start Participation Rate by</inlineHelpText>
        <label>Fast Start Participation Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Participation_Rate__c</fullName>
        <description>The Participation Rate a client needs to reach by the Fast Start Participation Date</description>
        <inlineHelpText>The Participation Rate a client needs to reach by the Fast Start Participation Date</inlineHelpText>
        <label>Fast Start Participation Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Fast_Start_Reaction__c</fullName>
        <inlineHelpText>What was the client&apos;s reaction to the fast start credit?</inlineHelpText>
        <label>Fast Start Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Possibly interested</fullName>
                </value>
                <value>
                    <fullName>Definitely interested</fullName>
                </value>
                <value>
                    <fullName>Accepting -- Email confirmation Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Forecast_Manager_Call__c</fullName>
        <label>Forecast Manager Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not in Forecast</fullName>
                    <default>true</default>
                    <label>Not in Forecast</label>
                </value>
                <value>
                    <fullName>Forecast - Upside</fullName>
                </value>
                <value>
                    <fullName>Forecast - Call</fullName>
                </value>
                <value>
                    <fullName>Forecast - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__GCRM_Contract_Path__c</fullName>
        <label>GCRM Contract Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__GCRM_Contracting_Account__c</fullName>
        <label>GCRM Contracting Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Go_to_Market_Strategy_Details__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>How does the Partner plan to go to market with the programs? i.e. Opt-out to all ASO groups on 1/1, built into the chronic condition offering, etc. What lines of business are included? Are there any onboarding expectations that have been discussed?</inlineHelpText>
        <label>Go to Market Strategy Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_ARR__c</fullName>
        <label>Gross ARR</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Gross_Program_ARR_Copy__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_TCV__c</fullName>
        <description>Renamed to EVA - JENGA-1540</description>
        <label>Gross EVA</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Gross_Program_TCV_Copy__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_Total_Contract_Value_TCV__c</fullName>
        <description>Not Used - JENGA-1540</description>
        <formula>(LVGO__Livongo_for_Diabetes_PwDs__c * 0.25 *  LVGO__Livongo_for_Diabetes_PPPM__c * LVGO__Livongo_for_Diabetes_Program_Term__c )
	+
	( LVGO__Livongo_for_Hypertension_PwHs__c * 0.10 *  LVGO__Livongo_for_Hypertension_PPPM__c *  LVGO__Livongo_for_Hypertension_Program_Term__c )
	+
	IF(LVGO__Livongo_for_Weight_Management_DP_PPPM__c == 1, 608 * (LVGO__Livongo_for_Weight_Management_DP_PwOs__c * 0.10),
	( LVGO__Livongo_for_Weight_Management_DP_PwOs__c * 0.10 *  LVGO__Livongo_for_Weight_Management_DP_PPPM__c *  LVGO__Livongo_for_WM_DP_Program_Term__c ))
	+
	IF(LVGO__Livongo_DPP_PPPM__c == 1, 608 * (LVGO__Livongo_DPP_PwPDs__c * 0.10),
	( LVGO__Livongo_DPP_PwPDs__c * 0.10 *  LVGO__Livongo_DPP_PPPM__c  * LVGO__Livongo_DPP_Program_Term__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Gross Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HP_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HP CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__HSS_Line_of_Business__c</fullName>
        <label>HSS Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicare-Medicaid Plan (MMP)</fullName>
                </value>
                <value>
                    <fullName>Plan Employees</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__HasOpportunityLvlCompetitorRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE if there is an Opportunity Level Competitor Relationship. Populated by Relationship Management process builder.</description>
        <label>HasOpportunityLvlCompetitorRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Has_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Broker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Incentive_Details__c</fullName>
        <label>Incentive Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Incentive_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Incremental_cost_of_Livongo_over_3_years__c</fullName>
        <formula>( LVGO__Livongo_for_Diabetes_PPPM__c   -  LVGO__Cost_of_diabetes_testing_supplies__c ) * 36</formula>
        <label>Incremental cost of Livongo over 3 years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Internal_Livongo_Health_Plan_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Livongo Health Plan Rep</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>mstur</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>jhelm</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>ciken</value>
            </filterItems>
            <filterItems>
                <field>User.Alias</field>
                <operation>equals</operation>
                <value>kcard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__IqScore__c</fullName>
        <label>Opportunity Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_this_account_a_Strategic_Account__c</fullName>
        <formula>LVGO__Account__r.LVGO__Is_this_account_a_Strategic_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this account a Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_this_opportunity_a_pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this opportunity a pilot?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__LV_Pricing_Structure__c</fullName>
        <label>LV Pricing Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Launch_Date__c</fullName>
        <label>Launch Date (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Launch_Goals__c</fullName>
        <inlineHelpText>What percentage of enrollment are you/the client expecting? Are there other goals/programs/partners at play?</inlineHelpText>
        <label>Launch Goals</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__LeadSource__c</fullName>
        <label>LeadSource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Source_Detail_Text__c</fullName>
        <label>Lead Source Detail Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_BH_Coaching_PPPM__c</fullName>
        <label>Livongo BH Coaching PMPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__PMPM__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_Behavioral_Health_PwBHs__c</fullName>
        <label>Livongo Behavioral Health PwBHs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>contains</operation>
            <value>Livongo for Behavioral Health by myStrength</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_DPP_PPPM__c</fullName>
        <label>Livongo DPP PPPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__UnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Prediabetes Management, Prediabetes Management Plus, Livongo Diabetes Prevention Program, DP Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_DPP_Program_Term__c</fullName>
        <label>Livongo DPP Program Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Diabetes Prevention Program, DP Solution, Prediabetes Management, Prediabetes Management Plus</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_DPP_PwPDs__c</fullName>
        <label>Livongo DPP PwPDs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo DPP Powered by Retrofit, Prediabetes Management, Prediabetes Management Plus, Livongo Diabetes Prevention Program, DP Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_WM_PwWMs__c</fullName>
        <label>Livongo WM PwWMs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Weight Management Powered by Retrofit</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_BH_PPPM__c</fullName>
        <label>Livongo for BH PPPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__UnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>contains</operation>
            <value>Behavioral Health</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>notEqual</operation>
            <value>Coaching: Livongo for Behavioral Health by myStrength</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Diabetes_Contract_Term__c</fullName>
        <label>Livongo for Diabetes Contract Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__ListPrice__c</field>
            <operation>equals</operation>
            <value>75</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Diabetes_PPPM__c</fullName>
        <label>Livongo for Diabetes PPPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__UnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Diabetes Management, Diabetes Management Plus, Livongo for Diabetes, DM Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Diabetes_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for Diabetes Program Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo for Diabetes, DM Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Diabetes_PwDs__c</fullName>
        <label>Livongo for Diabetes PwDs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Diabetes Management, Diabetes Management Plus, Livongo for Diabetes, DM Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Hypertension_Contract_Term__c</fullName>
        <label>Livongo for Hypertension Contract Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__ListPrice__c</field>
            <operation>equals</operation>
            <value>39</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Hypertension_PPPM__c</fullName>
        <label>Livongo for Hypertension PPPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__UnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Hypertension Management, Hypertension Management Plus, Livongo for Hypertension, CV Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Hypertension_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for Hypertension Program Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Hypertension Management, Hypertension Management Plus, Livongo for Hypertension, CV Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Hypertension_PwHs__c</fullName>
        <label>Livongo for Hypertension PwHs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Hypertension Management, Hypertension Management Plus, Livongo for Hypertension, CV Solution</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_WM_DP_Program_Term__c</fullName>
        <description>This is a roll-up summary of the opportunity program, program term field</description>
        <inlineHelpText>This is a roll-up summary of the opportunity program, program term field</inlineHelpText>
        <label>Livongo for WM Program Term</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Weight Management, Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Weight_Management_DP_PPPM__c</fullName>
        <label>Livongo for Weight Management PPPM</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__UnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Weight Management, Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_for_Weight_Management_DP_PwOs__c</fullName>
        <label>Livongo for Weight Management PwOs</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Product_Participants__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Weight Management, Livongo for Weight Management</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>